# global-agent-hackathon-may-2025

submissions/superwizard-demo-beta/: .gitignore  README.md  package.json  webpack.config.js
submissions/superwizard-demo-beta/server/: README.md  compose.yaml  env.template  pyproject.toml  requirements.txt  server.py  setup.sh  start.sh
submissions/superwizard-demo-beta/server/agents/: __init__.py  selector.py  superwizard_agent.py
submissions/superwizard-demo-beta/server/api/: __init__.py  settings.py
submissions/superwizard-demo-beta/server/db/: __init__.py  session.py  url.py
submissions/superwizard-demo-beta/server/tmp/: agents.db
submissions/superwizard-demo-beta/src/: App.tsx  constants.ts  manifest.json
submissions/superwizard-demo-beta/src/general/ai/: availableActions.ts  formatPrompt.ts  parseResponse.ts  systemGateway.ts  systemPrompt.ts
submissions/superwizard-demo-beta/src/general/browser/: pageRPC.ts
submissions/superwizard-demo-beta/src/general/dom/: ScriptingMode.ts  actionStateManager.ts  index.ts  simplifyDom.ts
submissions/superwizard-demo-beta/src/general/providers/: config.ts
submissions/superwizard-demo-beta/src/general/utils/: runtimeFunctionStrings.ts  utils.ts  validation.ts
submissions/superwizard-demo-beta/src/interface/: Body.tsx  Bottom.tsx  Header.tsx  Sidebar.tsx  index.tsx
submissions/superwizard-demo-beta/src/state/: currentTask.ts  settings.ts  store.ts
submissions/superwizard-demo-beta/src/styles/: fonts.ts  theme.ts
submissions/superwizard-demo-beta/utils/: env.js
(+29 files in other folders)
